--- a/Server/.gitignore
+++ b/Server/.gitignore
@@ -24,8 +24,8 @@ packages/
 project.lock.json
 project.assets.json
 
-# appsettings.Development.json
-# appsettings.json
+appsettings.Development.json
+appsettings.json
 server/appsettings.json
 secrets.json
 
