--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   geolocator: ^13.0.0
   google_maps_flutter: ^2.5.0
 
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -42,6 +43,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  shimmer: ^3.0.0
+  package_info_plus: ^8.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -62,9 +65,13 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/2280601608.jpg
+    - assets/2280601387.jpg
+    - assets/2280600213.jpg
+    - assets/2280600642.jpg
+    - assets/logo.jpg
+    - assets/qrcode.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
