--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   latlong2: ^0.9.1
   geolocator: ^13.0.0
   google_maps_flutter: ^2.5.0
+  shimmer: ^3.0.0
+  package_info_plus: ^8.0.0
+  http: ^1.2.0
+  google_sign_in: ^6.1.6
+  image_picker: ^1.0.7       # Để chọn ảnh từ thư viện/camera
+  shared_preferences: ^2.2.2 # Để lưu và lấy Token thật
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -45,6 +51,10 @@ dev_dependencies:
     sdk: flutter
   shimmer: ^3.0.0
   package_info_plus: ^8.0.0
+  http: ^1.2.0
+  google_sign_in: ^6.1.6
+  image_picker: ^1.0.7       # Để chọn ảnh từ thư viện/camera
+  shared_preferences: ^2.2.2 # Để lưu và lấy Token thật
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
