feat(tracking): scaffold tracking challenge feature
- Initialize tracking screen structure/n- Add SQL seed data for challenges table/n- Update routing configuration

--- a/Server/server/Properties/launchSettings.json
+++ b/Server/server/Properties/launchSettings.json
@@ -6,7 +6,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5144"
+      "applicationUrl": "http://0.0.0.0:5144"
     },
     "https": {
       "commandName": "Project",
